--- a/smartonedns/Dockerfile
+++ b/smartonedns/Dockerfile
@@ -1,12 +1,20 @@
-ARG BUILD_FROM
-FROM $BUILD_FROM
+ARG BUILD_FROM=hassioaddons/base:7.2.0
+# hadolint ignore=DL3006
+FROM ${BUILD_FROM}
+
+# Copy root filesystem
+COPY rootfs /
 
 # Setup base
-ARG DEHYDRATED_VERSION
-RUN apk add --no-cache openssl \
-  && curl -s -o /usr/bin/dehydrated \
-    "https://raw.githubusercontent.com/lukas2511/dehydrated/v${DEHYDRATED_VERSION}/dehydrated" \
-  && chmod a+x /usr/bin/dehydrated
+RUN apk add --no-cache \
+    coreutils=8.31-r0 \
+    wget=1.20.3-r0
+
+# Build arguments
+ARG BUILD_ARCH
+ARG BUILD_DATE
+ARG BUILD_REF
+ARG BUILD_VERSION
 
 # Copy data
 COPY data/*.sh /
