--- a/smartonedns/Dockerfile
+++ b/smartonedns/Dockerfile
@@ -2,7 +2,7 @@ ARG BUILD_FROM=homeassistant/armv7-base:3.10
 FROM $BUILD_FROM
 
 # Setup base
-ARG DEHYDRATED_VERSION
+ARG DEHYDRATED_VERSION=0.6.5
 RUN apk add --no-cache openssl \
   && curl -s -o /usr/bin/dehydrated \
     "https://raw.githubusercontent.com/lukas2511/dehydrated/v${DEHYDRATED_VERSION}/dehydrated" \
