--- a/smartonedns/Dockerfile
+++ b/smartonedns/Dockerfile
@@ -1,11 +1,11 @@
-ARG BUILD_FROM=homeassistant/armv7-base:3.10
+ARG BUILD_FROM
 FROM $BUILD_FROM
 
 # Setup base
-ARG DEHYDRATED_VERSION=0.6.5
+ARG DEHYDRATED_VERSION
 RUN apk add --no-cache openssl \
   && curl -s -o /usr/bin/dehydrated \
-    "https://raw.githubusercontent.com/lukas2511/dehydrated/v0.6.5/dehydrated" \
+    "https://raw.githubusercontent.com/lukas2511/dehydrated/v${DEHYDRATED_VERSION}/dehydrated" \
   && chmod a+x /usr/bin/dehydrated
 
 # Copy data
