--- a/smartonedns/config.json
+++ b/smartonedns/config.json
@@ -36,5 +36,5 @@
     ],
     "seconds": "int"
   },
-  "image": "smartonehome/smartone/{arch}-addon-smartonedns"
+  "image": "smartonehome/{arch}-addon-smartonedns"
 }
